Quickfix: Do not hide interview edit table header behind fixed video
Former-commit-id: 5fc2d9e277b53dabe0940f7ee33c3a4b716d3065

--- a/app/javascript/bundles/archive/stylesheets/modules/_content-tabs.scss
+++ b/app/javascript/bundles/archive/stylesheets/modules/_content-tabs.scss
@@ -582,6 +582,15 @@ table.edit-interview {
     }
 }
 
+.fix-video .edit-interview thead {
+  top: 220px;
+
+  @include screen-m {
+    top: 160px;
+  }
+}
+
+
 // Old classes tidying up later
 
 .column-content,
